--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "tsc",
     "test": "mocha",
     "test-lint": "eslint src --ext .js,.ts",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -43,7 +44,7 @@
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-import-resolver-typescript": "1.1.1",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
     "mocha": "^6.2.2",
